# note

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: document-view.tsx  file-manager.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  score-viewer.tsx
backend/: .beamignore  .env.test  .gitignore  Dockerfile  main.py  pyproject.toml  reqs.py  requirements.txt
backend/resources/audio/: liebestraum actual.midi  spider dance actual.midi  spider dance played.midi  spider dance trimmed.midi
backend/resources/debug_info/: last_audio.webm  last_edits.json
backend/resources/notebooks/: audio tempo analysis.ipynb  fit_tempo.ipynb  fit_tempo.md  fit_tempo_dataset.fitted_params.json  fit_tempo_dataset.json  sequence align.ipynb  tempo analysis.ipynb  tempo_plot.ipynb
backend/resources/scores/: last_pb.pb  spider dance aligned.json  spider dance oemer.notelist  spider dance oemer.pb  spider dance transkun.noteslist  spider dance.scoredata  spider_dance.pb  spider_dance.scoredata  spider_dance_edits.pb  spiderdance_notes.pb
backend/resources/static/: notes.proto
backend/scoring/: Cargo.toml  pyproject.toml
backend/scoring/src/: lib.rs
backend/src/: appwrite_main.py  debug.py  main.py  read_protobuf.py  requirements.txt  timer.py
backend/src/app/: __init__.py  app.py  app_main.py  debug.py  limiter.py  main.py
backend/src/app/api/: __init__.py  util.py
backend/src/app/api/accounts/: __init__.py  auth.py  signup.py
backend/src/app/api/documents/: __init__.py  folder.py
backend/src/app/api/documents/score/: __init__.py  combine_results.py  create_score.py  get_score.py  manage_scores.py  process_score.py  run_models.py
backend/src/app/api/scores/: __init__.py  create_score.py  process_scores.py  run_models.py
backend/src/app/api/scoring/: __init__.py  audio.py  audio_processing.py  recording.py
backend/src/app/rendering/: score_renderer.py
backend/src/app/scoring/: __init__.py  _native.py  edit_distance.py  extract_files.py  tempo.py
backend/src/rendering/: __init__.py  score_renderer.py
backend/src/scoring/: __init__.py  _native.py  edit_distance.py  extract_files.py  notes.py  notes_patch.py  notes_pb2.py  notes_pb2.pyi  tempo.py
backend/wheels/: scoring_native-0.1.0-cp38-abi3-macosx_11_0_arm64.whl  scoring_native-0.1.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  scoring_native-0.1.0-cp38-abi3-musllinux_1_2_x86_64.whl
components/: ComparisonDialog.tsx  auth-modals.tsx  folder.tsx  image-score-renderer.tsx  layout.tsx  music-xml-renderer.tsx  navbar.tsx  score.tsx  sidebar.tsx  upload-dialog.tsx
frontend/: .env.example  .env.test  .eslintignore  .eslintrc.json  README.md  eslint.config.mjs  global-setup.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  types.ts
lib/: account.ts  audio-recorder.ts  audio-recorder.tsx  constants.ts  edit-display.ts  logger.ts  (+3 more)
(+83 files in other folders)
