[package]
name = "scoring-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "scoring_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
ndarray = "0.16"
ndarray-conv = "0.5"

[build-dependencies]
pyo3-build-config = "0.26"
