[package]
name = "note-scoring"
version = "0.1.1"
description = "Rust-accelerated scoring"
license = "MIT"
edition = "2024"
repository = "https://github.com/orangishcat/note"
homepage = "https://github.com/orangishcat/note"
documentation = "https://github.com/orangishcat/note"

[lib]
name = "scoring_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
ndarray = "0.16"
ndarray-conv = "0.5"

[build-dependencies]
pyo3-build-config = "0.26"
